Fixed overflow issue

--- a/static/css/queries.css
+++ b/static/css/queries.css
@@ -44,8 +44,6 @@
 
 	html {
 		font-size: 40%;
-		overflow-x: hidden;
-		overflow-y: scroll;
 	}
 
 	.nav__links {
